Index Banner - Resolving Font Spacing Issue on Tablet

--- a/src/assets/scss/components/pages/_index.scss
+++ b/src/assets/scss/components/pages/_index.scss
@@ -54,6 +54,8 @@
       display: block;
       text-align: center;
       margin-bottom: 0.33em;
+      margin-top: 0.15em;
+      padding-top: 0.5em;
       font-size: 4em;
       color: $white;
       text-shadow: 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.66);
